# bess-dispatch-optimiser

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-demo.txt
app/: streamlit_app.py
chroma_store/: chroma.sqlite3
data/processed/: NSW1.parquet  QLD1.parquet  SA1.parquet  TAS1.parquet  VIC1.parquet
deploy/: deploy-cloudrun.sh  deploy-ecs.sh  ecs-task-def.json
docs/: agent_examples.json  backtest_NSW1.json  backtest_QLD1.json  backtest_SA1.json  backtest_TAS1.json  backtest_VIC1.json
docs/knowledge/: bess_arbitrage.md  fcas_and_revenue_stacking.md  nem_market_basics.md  tariffs_and_network.md
models/: forecaster_NSW1.pt  forecaster_QLD1.pt  forecaster_SA1.pt  forecaster_TAS1.pt  forecaster_VIC1.pt
scripts/: capture_agent_examples.py  fetch_data.py  run_backtest.py  train_forecast.py  ui_audit.py  ui_walk.py
src/bess/: __init__.py  agent.py  api.py  backtest.py  config.py  data.py  forecast.py  model.py  optimiser.py  rag.py
tests/: test_api.py  test_forecast.py  test_optimiser.py
